# backend-epasien

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: db.rs  fcm.rs  main.rs
src/handlers/: antrian.rs  auth.rs  booking.rs  jadwal.rs  kamar.rs  lab_results.rs  mod.rs  news.rs  notification.rs  pdf_generator.rs  radiologi.rs  rekam_medis.rs  riwayat_obat.rs  surat_kontrol.rs
src/middleware/: rate_limit.rs
src/models/: antrian.rs  booking.rs  jadwal.rs  kamar.rs  lab_results.rs  mod.rs  pasien.rs  radiologi.rs  rekam_medis.rs  surat_kontrol.rs
